test/compile_errors/stage1/obj/usingnamespace_with_wrong_type.zig
usingnamespace void;

// usingnamespace with wrong type
//
// tmp.zig:1:1: error: expected struct, enum, or union; found 'void'
